--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg bg-light fixed-top ">
       <div class="container">
-        <a class="navbar-brand col-lg-5 px-lg-5 mx-lg-5" href="#">TechForward 2024</a>
+        <a class="navbar-brand" href="#">TechForward 2024</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -28,21 +28,25 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="collapse navbar-collapse col-lg-7 px-4 text-end"
-          id="navbarMenu" 
-        >
-          <ul class="navbar-nav ">
-           <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Home</a></li> 
-           <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-           <li class="nav-item"><a class="nav-link" href="#">Schedule</a></li>
-           <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
-           <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
-           <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+        <div class="collapse navbar-collapse " id="navbarMenu">
+          <ul class="navbar-nav d-flex ms-auto ">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"  href="#">About</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#">Schedule</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
+
 
     <!-- Hero Banner  -->
     <div class="hero-banner text-white text-center d-flex align-items-center">
