--- a/speakers.html
+++ b/speakers.html
@@ -1,12 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechForward 2024</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
+
 <body>
-    <h1>brvshrbeyvyrbeyvybevehvdvbdfh</h1>
+    <!-- Navbar  -->
+
+    <nav class="navbar navbar-expand-lg bg-light fixed-top ">
+        <div class="container">
+            <a class="navbar-brand" href="#">TechForward2024</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu"
+                aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarMenu">
+                <ul class="navbar-nav d-flex ms-auto ">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="#">Schedule</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <div class="container mt-5 pt-5">
+        <div class="header-event text-center">
+            <h1>Event Speakers</h1>
+            <p>Meet the industry experts who will be speaking at TechForward 2024.</p>
+        </div>
+
+
+        <div class="container featured-speakers">
+            <div class="row g-4 pb-3">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/Images - Person 01.jpg" class="card-img-top" alt="Speaker-1" />
+                        <div class="card-body">
+                            <h5 class="card-title">Emily Hart</h5>
+                            <p class="card-text">
+                                Emily Hart is an esteemed Robotics
+                                Engineer and the mind behind several groundbreaking autonomous robotics systems.
+                                Currently spearheading the Advanced Robotics Division at TechNova Solutions, Emily's
+                                work focuses on creating robots that can aid in disaster relief efforts, demonstrating
+                                her commitment to using technology for humanitarian causes. Her keynotes often explore
+                                the fusion of ethics and innovation in robotics.
+                            </p>
+                            <div class="social-media ">
+                                <span><i class="fa-brands fa-twitter text-primary px-3"></i><a
+                                        class="text-decoration-none" href="https://twitter.com/"
+                                        target="_blank">Twitter</a></span>
+                                <span><i class="fa-brands fa-linkedin text-primary px-3"></i></i><a
+                                        class="text-decoration-none" href="https://www.linkedin.com"
+                                        target="_blank">Linkedin</a></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/Images - Person 02.jpg" class="card-img-top" alt="Speaker-2" />
+                        <div class="card-body">
+                            <h5 class="card-title">Michael Anderson</h5>
+                            <p class="card-text">
+                                Michael Anderson is a Software Architect with a passion for developing scalable cloud
+                                computing solutions. As a Senior Architect at CloudScape Technologies, Michael has led
+                                the design of robust cloud infrastructures that support millions of users worldwide. His
+                                expertise in cloud security and architecture has made him a pivotal figure in the tech
+                                industry, and he frequently shares his insights at international tech conferences.
+                            </p>
+                            <div class="social-media ">
+                                <span><i class="fa-brands fa-twitter text-primary px-3"></i><a
+                                        class="text-decoration-none" href="https://twitter.com/"
+                                        target="_blank">Twitter</a></span>
+                                <span><i class="fa-brands fa-linkedin text-primary px-3"></i></i><a
+                                        class="text-decoration-none" href="https://www.linkedin.com"
+                                        target="_blank">Linkedin</a></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/Images - Person 03.jpg" class="card-img-top" alt="Speaker-3" />
+                        <div class="card-body">
+                            <h5 class="card-title">David Miller</h5>
+                            <p class="card-text">
+                                David Miller is a leading expert in Quantum Computing, currently leading research
+                                initiatives at QuantumTech Innovators. His work aims to unlock new possibilities in
+                                computing power, focusing on quantum algorithms that could solve complex problems faster
+                                than traditional computers.
+                                David's presentations demystify quantum computing for a broad audience, making him a
+                                popular speaker at tech events.
+                            </p>
+                            <div class="social-media ">
+                                <span><i class="fa-brands fa-twitter text-primary px-3"></i><a
+                                        class="text-decoration-none" href="https://twitter.com/"
+                                        target="_blank">Twitter</a></span>
+                                <span><i class="fa-brands fa-linkedin text-primary px-3"></i></i><a
+                                        class="text-decoration-none" href="https://www.linkedin.com"
+                                        target="_blank">Linkedin</a></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row g-4 pt-2 pb-3">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/Images - Person 07.jpg" class="card-img-top" alt="Speaker-4" />
+                        <div class="card-body">
+                            <h5 class="card-title">Ethan Wallace</h5>
+                            <p class="card-text">
+                                Ethan Wallace is a Cloud Computing
+                                Visionary with over 15 years of experience in designing scalable, secure cloud
+                                infrastructure. As the CTO of CloudGenius Tech, Ethan has led groundbreaking projects that
+                                redefine how businesses leverage the cloud for competitive advantage. He's known for his
+                                engaging talks on the future of cloud technologies and innovative approaches to data
+                                security and privacy.
+                            </p>
+                            <div class="social-media ">
+                                <span><i class="fa-brands fa-twitter text-primary px-3"></i><a class="text-decoration-none"
+                                        href="https://twitter.com/" target="_blank">Twitter</a></span>
+                                <span><i class="fa-brands fa-linkedin text-primary px-3"></i></i><a
+                                        class="text-decoration-none" href="https://www.linkedin.com"
+                                        target="_blank">Linkedin</a></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
     
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/Images - Person 08.jpg" class="card-img-top" alt="Speaker-5" />
+                        <div class="card-body">
+                            <h5 class="card-title">Naomi Rivera</h5>
+                            <p class="card-text">
+                                Naomi Rivera is a tech entrepreneur and software developer, known for her innovative
+                                startup, CodeConnect, a platform that connects budding programmers with experienced mentors.
+                                Her mission is to democratize learning to code and support underrepresented groups in tech.
+                                Naomi's engaging talks on entrepreneurship, tech education, and diversity in STEM are filled
+                                with practical advice and inspiring stories.
+                            </p>
+                            <div class="social-media ">
+                                <span><i class="fa-brands fa-twitter text-primary px-3"></i><a class="text-decoration-none"
+                                        href="https://twitter.com/" target="_blank">Twitter</a></span>
+                                <span><i class="fa-brands fa-linkedin text-primary px-3"></i></i><a
+                                        class="text-decoration-none" href="https://www.linkedin.com"
+                                        target="_blank">Linkedin</a></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/Images - Person 09.jpg" class="card-img-top" alt="Speaker-6" />
+                        <div class="card-body">
+                            <h5 class="card-title">Christopher Brooks</h5>
+                            <p class="card-text">
+                                Christopher Brooks is an Environmental
+                                Tech Innovator focused on developing sustainable tech solutions. As the founder of EcoTech
+                                Solutions, Christopher's work on bio-degradable electronics and green tech initiatives has
+                                significantly contributed to reducing electronic waste. His efforts to bridge technology and
+                                environmental sustainability have inspired many to adopt more eco-friendly practices in
+                                tech.
+                            </p>
+                            <div class="social-media ">
+                                <span><i class="fa-brands fa-twitter text-primary px-3"></i><a class="text-decoration-none"
+                                        href="https://twitter.com/" target="_blank">Twitter</a></span>
+                                <span><i class="fa-brands fa-linkedin text-primary px-3"></i></i><a
+                                        class="text-decoration-none" href="https://www.linkedin.com"
+                                        target="_blank">Linkedin</a></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row g-4 py-2">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/Images - Person 10.jpg" class="card-img-top" alt="Speaker-7" />
+                        <div class="card-body">
+                            <h5 class="card-title">Lily Zhang</h5>
+                            <p class="card-text">
+                                Lily Zhang is a celebrated Al Research Scientist, recognized for her work in machine learning
+                                algorithms that power intelligent systems. At Al Innovations Inc..
+                                Lily leads a team dedicated to makina Al more accessible and ethical. Her research focuses on
+                                developing Al that can solve real-world problems. from healthcare to environmental protection.
+                                Lilv's insights into the future of Al are both enlightening and inspiring.
+                            </p>
+                            <div class="social-media ">
+                                <span><i class="fa-brands fa-twitter text-primary px-3"></i><a class="text-decoration-none"
+                                        href="https://twitter.com/" target="_blank">Twitter</a></span>
+                                <span><i class="fa-brands fa-linkedin text-primary px-3"></i></i><a class="text-decoration-none"
+                                        href="https://www.linkedin.com" target="_blank">Linkedin</a></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- Footer Section  -->
+
+    <div class="container-fluid footer bg-light mt-3">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-6">
+                    <p>Follow us on social media:</p>
+                    <div class="social-media ">
+                        <span><i class="fa-brands fa-twitter"></i><a href="https://twitter.com/"
+                                target="_blank">Twitter</a></span>
+                        <span><i class="fa-brands fa-facebook"></i><a href="https://www.facebook.com/"
+                                target="_blank">Facebook</a></span>
+                        <span><i class="fa-brands fa-instagram"></i></i><a href="https://www.instagram.com/"
+                                target="_blank">Instagram</a></span>
+                        <span><i class="fa-brands fa-linkedin"></i></i><a href="https://www.linkedin.com"
+                                target="_blank">Linkedin</a></span>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <p>Quick links:</p>
+                    <div class="footer-menu">
+                        <a aria-current="page" href="#">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Schedule</a>
+                        <a href="#">Speakers</a>
+                        <a href="#">Register</a>
+                        <a href="#">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-4 pt-5">TechForward 2024 © All rights reserved.</div>
+            <a href="#top" id="backto-top">Back to top</a>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
