--- a/registration.html
+++ b/registration.html
@@ -42,17 +42,17 @@
 
     <!-- Registration Form  -->
 
-    <div class="container col-md-6 mt-5 pt-5">
-        <h1 class="text-center">Register for TechForward 2024</h1>
-        <p class="text-center fs-5">Please fill out the form below to register for the event.</p>
+    <div class="container registration col-md-6 pt-5">
+        <h1 class="text-center mx-auto">Register for TechForward 2024</h1>
+        <p class="text-center">Please fill out the form below to register for the event.</p>
         <form id="registrationForm" novalidate class="px-md-5">
 
-          <div class="form-group p-2">
+          <div class="form-group">
             <label for="fullName">Full Name</label>
             <input type="text" class="form-control" id="fullName" placeholder="Enter full name" name="fullName" required>
           </div>
 
-          <div class="form-group p-2">
+          <div class="form-group">
             <label for="email">Email Address</label>
             <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
           </div>
@@ -77,7 +77,7 @@
 
           <div class="form-group p-2">
             <label for="sessionInterest">Session Interest</label>
-            <select class="form-select" aria-label="Default select example">
+            <select class="form-select" id="sessionInterest" aria-label="Default select example">
                 <option selected>Technology Trends</option>
                 <option value="1">Software Develoption</option>
                 <option value="2">Cybersecurity</option>
@@ -106,9 +106,10 @@
           </div>
         </form>
       </div>    
-    
+
+     <!-- Form validation using JavaScript -->
       <script>
-        // Form validation using JavaScript
+
         document.getElementById('registrationForm').addEventListener('submit', function(event) {
           if (!this.checkValidity()) {
             event.preventDefault();
@@ -116,6 +117,7 @@
           }
           this.classList.add('was-validated');
         });
+
       </script>
 
 
