Footer and Navbar update

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+
     <!-- Navbar  -->
 
-    <nav class="navbar navbar-expand-lg bg-light fixed-top ">
+    <nav class="navbar navbar-expand-lg bg-light fixed-top" >
       <div class="container">
         <a class="navbar-brand" href="#">TechForward 2024</a>
         <button
@@ -58,7 +59,7 @@
     </div>
  
     <!-- Why Attend section  -->
-    <div class="container-fluid bg-body-light text-center py-5">
+    <div class="container-fluid bg-body-light text-center  py-5">
       <h2>Why Attend?</h2>
       <p>
         Discover the latest tech trends, meet industry experts, and network with
@@ -295,32 +296,34 @@
 
     <!-- Footer Section  -->
 
-    <div class="container-fluid footer bg-light mt-5">
+    <div class="container-fluid footer bg-light  mt-5"  style="--bs-text-opacity: .5;">
         <div class="container py-5">
-        <div class="row">
-            <div class="col-lg-6">
-                <p>Follow us on social media:</p>
-                <div class="social-media ">
-                    <span><i class="fa-brands fa-twitter"></i><a href="https://twitter.com/" target="_blank">Twitter</a></span>
-                    <span><i class="fa-brands fa-facebook"></i><a href="https://www.facebook.com/" target="_blank">Facebook</a></span>
-                    <span><i class="fa-brands fa-instagram"></i></i><a href="https://www.instagram.com/" target="_blank">Instagram</a></span>
-                    <span><i class="fa-brands fa-linkedin"></i></i><a href="https://www.linkedin.com" target="_blank">Linkedin</a></span>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <p>Quick links:</p>
-                <div class="footer-menu">
-                    <a  aria-current="page" href="#">Home</a>
-                    <a  href="#">About</a>
-                    <a  href="#">Schedule</a>
-                    <a  href="#">Speakers</a>
-                    <a  href="#">Register</a>
-                    <a  href="#">Contact Us</a>
+          <div class="row g-3">
+              <div class="col-lg-6">
+                  <p class="">Follow us on social media:</p>
+                  <div class="social-media ">
+                      <span><i class="fa-brands fa-twitter pe-1 text-primary"></i><a href="https://twitter.com/" class="text-decoration-none" target="_blank">Twitter</a></span>
+                      <span><i class="fa-brands fa-facebook px-1 text-primary"></i><a href="https://www.facebook.com/" class="text-decoration-none" target="_blank">Facebook</a></span>
+                      <span><i class="fa-brands fa-instagram px-1 text-primary"></i></i><a href="https://www.instagram.com/" class="text-decoration-none" target="_blank">Instagram</a></span>
+                      <span><i class="fa-brands fa-linkedin px-1 text-primary"></i></i><a href="https://www.linkedin.com" class="text-decoration-none" target="_blank">Linkedin</a></span>
                   </div>
-            </div>
-        </div>
-        <div class="text-center mt-4 pt-5">TechForward 2024 © All rights reserved.</div>
-        <a href="#top" id="backto-top">Back to top</a>
+              </div>
+              <div class="col-lg-6">
+                  <p>Quick links:</p>
+                  <div class="footer-menu">
+                      <a  aria-current="page" href="#" class="text-decoration-none pe-1">Home</a>
+                      <a  href="#" class="text-decoration-none px-1">About</a>
+                      <a  href="#" class="text-decoration-none px-1">Schedule</a>
+                      <a  href="#" class="text-decoration-none px-1">Speakers</a>
+                      <a  href="#" class="text-decoration-none px-1">Register</a>
+                      <a  href="#" class="text-decoration-none">Contact Us</a>
+                    </div>
+              </div>
+          </div>
+          <div class="text-center mt-4 pt-5"><p>TechForward 2024 © All rights reserved.</p></div>
+          <div class="text-end">
+            <a href="#top" id="backto-top">Back to top</a>
+          </div>
         </div>
     </div>
 
