--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h2>Featured Speakers</h2>
       <div class="row g-4">
         <div class="col-md-4">
-          <div class="card">
+          <div class="card speakers-hover">
             <img
               src="images/Images - Person 01.jpg"
               class="card-img-top"
@@ -92,7 +92,7 @@
         </div>
 
         <div class="col-md-4">
-          <div class="card">
+          <div class="card speakers-hover">
             <img
               src="images/Images - Person 02.jpg"
               class="card-img-top"
@@ -111,7 +111,7 @@
         </div>
 
         <div class="col-md-4">
-          <div class="card">
+          <div class="card speakers-hover">
             <img
               src="images/Images - Person 03.jpg"
               class="card-img-top"
